# it-support-agent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  spec.md  test-cases.md
.claude/rules/: spec-compliance.md  tdd-rule.md
data/sample_docs/: hardware_requests.txt  password_reset.txt  printer_troubleshooting.txt  software_installation.txt  vpn_guide.txt
reviews/: pr-1-review.md
src/it_support_agent/: __init__.py  agent.py  api.py  config.py  ingestion.py  main.py  retriever.py
tests/: test_agent.py  test_api.py  test_ingestion.py  test_main.py  test_retriever.py
